manifest/objects/Apttus__APTS_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>APTS_NoticeAddress2__c</fullName>
        <label>Notice Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_NoticeAttentionTo__c</fullName>
        <label>Notice Attention To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_NoticeCity__c</fullName>
        <label>Notice City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_NoticeComments__c</fullName>
        <label>Notice Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_NoticeCopyTo__c</fullName>
        <label>Notice Copy To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_NoticeEmail__c</fullName>
        <label>Notice Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_NoticeForTerminationForConvDays__c</fullName>
        <description>Number of days&apos; notice required to terminated for convenience</description>
        <label>Notice for Termination for Conv (Days)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_NoticeOfUnauthorizedDisclosureTime__c</fullName>
        <label>Notice of Unauthorized Disclosure Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_NoticeState__c</fullName>
        <label>Notice State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_NoticeZip__c</fullName>
        <label>Notice Zip</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Notice_Change_to_Subcon_Req__c</fullName>
        <description>Notification of Subcontractors Required</description>
        <label>Notice Change to Subcon. Req</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes: Consent</fullName>
                </value>
                <value>
                    <fullName>Yes: Notice Only</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Notice Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Notice_City_State_Zip__c</fullName>
        <formula>IF(NOT(ISBLANK(APTS_NoticeCity__c)),APTS_NoticeCity__c &amp; &apos;, &apos;,&apos;&apos;) &amp;    IF(NOT(ISBLANK(APTS_NoticeState__c)),APTS_NoticeState__c &amp; &apos;, &apos;,&apos;&apos;) &amp;    IF(NOT(ISBLANK(APTS_NoticeZip__c)), APTS_NoticeZip__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notice City State Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Notice_Existg_Subcon_Access_Change__c</fullName>
        <description>Notif. of Change to Subcont. Access Req</description>
        <label>Notice Existg Subcon. Access Change Req</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Notice_for_Preventing_Autorenewal__c</fullName>
        <label>Notice for Preventing Autorenewal (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Notice_of_Incident_Req_w_i_Time__c</fullName>
        <description>Notif of Incident Req w/i Time Period</description>
        <label>Notice of Incident Req w/i Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Notice_of_Security_Incident_Req__c</fullName>
        <description>Indicate whether a notice of security incident is required</description>
        <label>Notice of Security Incident Req</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Notice_of_Signfct_IT_Arch_t_Change__c</fullName>
        <description>Indicate whether TDH is required to provide notification of significant architecture change</description>
        <label>Notice of Signfct IT Arch&apos;t Change Req</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Consent Required</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Notice_of_Signfct_Security_Change__c</fullName>
        <description>Indicate whether TDH is required to provide notification of significant security change</description>
        <label>Notice of Signfct Security Change Req</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Consent Required</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_NumberofLivesGuarantee__c</fullName>
        <label>Number of Lives Guarantee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Offshore_Access_to_US_Data_Allowed__c</fullName>
        <description>Indicate whether offshore ACCESS TO US data is allowed</description>
        <label>Offshore Access to US Data Allowed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Consent Required</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Offshore_Storage_of_US_Data_Allowed__c</fullName>
        <description>Indicate whether offshore STORAGE OF US data is allowed</description>
        <label>Offshore Storage of US Data Allowed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Consent Required</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_OneTimeFeesCount__c</fullName>
        <label>OneTimeFeesCountValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_OneTimeFeesExtensionPrice__c</fullName>
        <label>OneTimeFeesExtensionPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Opportunity_Loss_Reason__c</fullName>
        <formula>TEXT( Apttus__Related_Opportunity__r.L2O_Loss_Reason__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Loss Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Opportunity_Region__c</fullName>
        <formula>TEXT(Apttus__Related_Opportunity__r.L2O_Business_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Original_Lessor_Returned_Date__c</fullName>
        <label>Original Lessor Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Original_Lessor_Signed_By__c</fullName>
        <label>Original Lessor Signed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Original_Lessor_Signed_Date__c</fullName>
        <label>Original Lessor Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Orignal_Lessor_Signed_Title__c</fullName>
        <label>Orignal Lessor Signed Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_OtherPartyContractingEntity__c</fullName>
        <description>Please update this field if the client&apos;s legal name or contracting entity is different than the Account name</description>
        <label>Other Party Contracting Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_OtherPartySignedBy__c</fullName>
        <label>Other Party Signed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Other_Governing_Law__c</fullName>
        <description>Applicable governing law if &apos;Other&apos; is selected from Governing Law field</description>
        <label>Other Governing Law</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Other_Indemnification__c</fullName>
        <description>If you have chosen &quot;Non-Standard&quot; as &quot;Indemnification Category&quot;, please describe</description>
        <label>Non-Standard Indemnification Categories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Other_Payment_Term__c</fullName>
        <description>If Payment Term is selected as &apos;Other&apos;, please specify here</description>
        <label>Other Payment Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PLEOMinimum__c</fullName>
        <defaultValue>&quot;$10 million&quot;</defaultValue>
        <description>Teladoc&apos;s minimum PL E&amp;O insurance requirement</description>
        <label>PL E&amp;O Minimum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PO_Required_Equipment__c</fullName>
        <label>PO Required - Equipment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_PO_Required_One_Time_Services__c</fullName>
        <label>PO Required -One-Time Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_PO_Required_Subscription_Services__c</fullName>
        <label>PO Required - Subscription Services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Parent_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements_parent_account_owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Parent_Assigned_Client_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Assigned Client Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements_parent_client_user</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Payment_TermsCC__c</fullName>
        <defaultValue>&quot;Net 30&quot;</defaultValue>
        <label>Payment Terms (Chronic Care)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 6</fullName>
                </value>
                <value>
                    <fullName>Net 70</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Net 120</fullName>
                </value>
                <value>
                    <fullName>2% Net 15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Performance_Guarantee_Description__c</fullName>
        <inlineHelpText>Please indicate if PG is standard or nonstandard, type of PG and % Fees at Risk. Attach any approvals for the PGs under Files</inlineHelpText>
        <label>Performance Guarantee Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Pricing_Model__c</fullName>
        <description>Pricing model used by client</description>
        <label>Pricing Model (Chronic Care)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bundled</fullName>
                </value>
                <value>
                    <fullName>Upfront</fullName>
                </value>
                <value>
                    <fullName>Fee for Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Primary_Contact_Email_Address__c</fullName>
        <formula>Apttus__Primary_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Primary_Contact_Email__c</fullName>
        <formula>Apttus__Account__r.L2O_Amend_Asset_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Primary_Contact_Name__c</fullName>
        <formula>Apttus__Primary_Contact__r.FirstName +&apos; &apos;+Apttus__Primary_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Primary_Contact_Phone_No__c</fullName>
        <formula>Apttus__Primary_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Phone No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Primary_Contact_Title__c</fullName>
        <formula>Apttus__Primary_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ProcessFlow__c</fullName>
        <formula>NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Flow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Publicity_All_Other_Uses_Consent__c</fullName>
        <defaultValue>&quot;Yes&quot;</defaultValue>
        <description>Indicates whether Teladoc must obtain consent from the client for all other uses</description>
        <label>Publicity: All Other Uses Consent Req</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Publicity_Deck_Client_List_Consent__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <description>Indicates whether Teladoc must obtain consent from the client to use in sales deck and customer list</description>
        <label>Publicity: Deck/Client List Consent Req</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Agreements (Quote)</relationshipLabel>
        <relationshipName>Agreements_quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Recall_eSignature__c</fullName>
        <formula>IF( AND( ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status__c,&quot;Other Party Signatures&quot;) ), HYPERLINK(&quot;/apex/Apttus_DocuApi__DocuSignRecallEnvByEnvId?envelopeparentid=&quot;&amp;Id, IMAGE(&quot;/resource/APTS_Button_Recall_Esignature&quot;,&quot;Recall E-Signature&quot;), &quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recall eSignature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Redlines__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Redlines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_ReferralFeesComments__c</fullName>
        <label>Referral Fees Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ReferralFeesPercentage__c</fullName>
        <defaultValue>&quot;fifteen percent (15%)&quot;</defaultValue>
        <label>Referral Fees (%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Related_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreements (Related Agreement)</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Related_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Renew_Notice_Email_Date__c</fullName>
        <formula>If(  (!Apttus__Auto_Renewal__c &amp;&amp; ! Apttus__Perpetual__c &amp;&amp;  ISPICKVAL( Apttus__Status__c , &apos;Activated&apos;)&amp;&amp;  ISPICKVAL( Apttus__Status_Category__c , &apos;In Effect&apos;) ), Apttus__Contract_End_Date__c -  Apttus__Internal_Renewal_Notification_Days__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renew Notice Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Requires_Contract_Authoring__c</fullName>
        <inlineHelpText>Check Yes if require a contract document to be drafted or if a self-service document requires internal signature. This does NOT include CCS Forms</inlineHelpText>
        <label>Requires Contract Authoring</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_RightToCurePeriodDays__c</fullName>
        <defaultValue>&quot;30 Days&quot;</defaultValue>
        <description>Please include the word &apos;days&apos; in this field - the information in this field will populate in the agreement document.</description>
        <label>Right to Cure Period (Days)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SLA_Details__c</fullName>
        <description>Used to capture custom details for SLAs</description>
        <label>SLA Details (Chronic Care)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_SSO_Details__c</fullName>
        <description>Provide the products, party(ies) and details for SSO</description>
        <label>SSO Details (if applicable)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Sale_Type__c</fullName>
        <formula>TEXT( Apttus__Related_Opportunity__r.L2O_Sales_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SalesPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Opportunity Owner at the time the contract was signed</description>
        <label>Sales Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements_sales_person</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Shipment_Terms__c</fullName>
        <label>Shipment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FOB- Destination</fullName>
                </value>
                <value>
                    <fullName>FOB- Origin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Shipping_Terms__c</fullName>
        <label>Shipping Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_SignatureDeclined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please check this box when the client declines to sign an agreement document, then complete the Signature Declined Details field. The Contracts team will receive a notification.</description>
        <label>Signature Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Signature_Declined_Details__c</fullName>
        <description>Please provide an explanation for the signature decline and a detailed description of edits you would like the Contracts Team to make on the contract document.</description>
        <label>Signature Declined Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Specified_Subcon_List__c</fullName>
        <description>Specified Subcontractor List</description>
        <label>Specified Subcon. List</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_StartDateOfServices__c</fullName>
        <label>Start Date Of Services</label>
        <summarizedField>Apttus__AgreementLineItem__c.APTS_Product_Start_Date__c</summarizedField>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Status_Notes__c</fullName>
        <label>Status Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Subcon_Comments__c</fullName>
        <description>Subcontractor Comments</description>
        <label>Subcon. Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SubscriptionFeesExtendedSum__c</fullName>
        <label>SubscriptionFeesExtendedSum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_SubscriptionLineItemCount__c</fullName>
        <label>SubscriptionLineItemCount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_TDH_Change_in_Control_Consent_Req__c</fullName>
        <description>Indicates whether Teladoc is required to obtain consent if change in control</description>
        <label>TDH Change in Control Consent Req</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Tax__c</fullName>
        <label>Tax</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Non-Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_TeladocAssignment__c</fullName>
        <defaultValue>&quot;Consent Required&quot;</defaultValue>
        <description>Indicates whether Teladoc can assign the agreement</description>
        <label>Teladoc Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Right of Assignment</fullName>
                </value>
                <value>
                    <fullName>Allowed</fullName>
                </value>
                <value>
                    <fullName>Consent Required</fullName>
                </value>
                <value>
                    <fullName>Silent</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Term_Years__c</fullName>
        <label>Term(Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Terminate_Custom__c</fullName>
        <formula>IF (OR(AND($User.Id = OwnerId,ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Renewed&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Activated&quot;)))),IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), HYPERLINK(&quot;/apex/Apttus__LightningAgreementTerminate?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Terminate&quot;, &quot;Terminate&quot;),&quot;_self&quot;), HYPERLINK(&quot;/apex/Apttus__AgreementTerminate?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Terminate&quot;, &quot;Terminate&quot;),&quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Terminate_Custom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_TerminationForConvWindow__c</fullName>
        <description>Indicates when an agreement can be terminated for convenience</description>
        <label>Termination for Conv Window</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>At Any Time</fullName>
                </value>
                <value>
                    <fullName>On or After 1st Anniv Of Effective Date</fullName>
                </value>
                <value>
                    <fullName>1st Anniv of Start Date</fullName>
                </value>
                <value>
                    <fullName>Each Anniv of Start Date</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_TerminationForMaterialBreach__c</fullName>
        <defaultValue>&quot;Yes: Mutual&quot;</defaultValue>
        <description>Indicates whether an agreement can be terminated for material breach, and which party(ies) can terminate for convenience</description>
        <label>Termination for Material Breach</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes: Mutual</fullName>
                </value>
                <value>
                    <fullName>Yes: TDH Only</fullName>
                </value>
                <value>
                    <fullName>Yes: Client Only</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>